# xyz_ws

./: .gitignore  README.md  requirements.txt  tree_output.txt
src/SmartFuelApp/: .env  KAKAO_LOGIN_GUIDE.md  analysis_options.yaml  pubspec.yaml  키설정_TODO.dart
src/SmartFuelApp/android/app/: google-services.json
src/SmartFuelApp/ios/Runner.xcodeproj/: project.pbxproj
src/SmartFuelApp/lib/: main.dart
src/SmartFuelApp/lib/config/: app_config.dart
src/SmartFuelApp/lib/screens/: fuel_progress_screen.dart  fuel_selection_screen.dart  launch.json  payment_screen.dart  splash_screen.dart
src/SmartFuelApp/lib/services/: conversation_manager_service.dart  google_login_service.dart  kakao_login_service.dart  llm_service.dart  voice_interaction_service.dart
src/SmartFuelApp/lib/theme/: app_theme.dart
src/SmartFuelApp/lib/widgets/: profile_view.dart  realsense_view.dart  voice_command_bar.dart  webcam_view.dart  webrtc_view.dart
src/SmartFuelApp/linux/: CMakeLists.txt
src/SmartFuelApp/server/: README.md  requirements.txt  server.py
src/SmartFuelApp/test/: widget_test.dart
src/SmartFuelApp/web/: manifest.json
src/doosan-robot2/: README.md  test.sh
src/doosan-robot2/.github/ISSUE_TEMPLATE/: bug-form.yml
src/doosan-robot2/.github/workflows/: docker-image.yml  issue_bot.yml
src/doosan-robot2/dsr_bringup2/: setup.py
src/doosan-robot2/dsr_bringup2/dsr_bringup2/: dsr_mujoco_bridge.py  gazebo_connection.py  run_emulator.py
src/doosan-robot2/dsr_bringup2/launch/: dsr_bringup2_gazebo.launch.py  dsr_bringup2_moveit.launch.py  dsr_bringup2_mujoco.launch.py  dsr_bringup2_rviz.launch.py  dsr_bringup2_spawn_on_gazebo.launch.py
src/doosan-robot2/dsr_common2/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_common2/include/: DRFL.h  DRFLEx.h  DRFS.h
src/doosan-robot2/dsr_common2/servicepack/: auto_setup
src/doosan-robot2/dsr_common2/servicepack/serial_node_example/: CMakeLists.txt
src/doosan-robot2/dsr_controller2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_controller2/config/: default.yaml  dsr_controller2.yaml  dsr_controller2_gz_p3020.yaml  dsr_controller2_p3020.yaml
src/doosan-robot2/dsr_controller2/launch/: dsr_control2.launch.py  dsr_moveit2.launch.py
src/doosan-robot2/dsr_controller2/src/: dsr_controller2.cpp
src/doosan-robot2/dsr_description2/: CMakeLists.txt
src/doosan-robot2/dsr_example2/dsr_example/: README.md  package.xml  setup.cfg  setup.py
src/doosan-robot2/dsr_example2/dsr_example/config/: planner_params.yaml
src/doosan-robot2/dsr_example2/dsr_example/dsr_example/: car_auto_announce_node.py  face_payment_manager.py  fuel_task_manager.py  gripper_drl_controller.py  llm_narrator_client.py  llm_narrator_server.py  motion_controller.py  ocr_manager_ros.py  ocr_streamer.py  plate_recognizer.py  realsense_manager_ros.py  realsense_streamer.py  test_listener_node.py  test_task_manager.py  vision_target_node.py  webcam_manager_ros.py  webcam_streamer.py
src/doosan-robot2/dsr_example2/dsr_example/dsr_example/ONNX/: export_onnx.py
src/doosan-robot2/dsr_example2/dsr_example/dsr_example/pre-version/: dual_yolo_manager.py  fuel_task_manager.py
src/doosan-robot2/dsr_example2/dsr_example/dsr_example/simple/: example_comp.py  example_force.py  example_gripper.py  example_move.py  gripper_drl_controller.py  single_robot_simple.py  test_realsense.py  test_realsense_force.py
src/doosan-robot2/dsr_example2/dsr_example/dsr_example/test/: motion_controller.py  realsense_manager.py  webcam_manager_ros.py  yolo_manager.py
src/doosan-robot2/dsr_example2/dsr_example/launch/: smart_refueler_bringup.launch.py
src/doosan-robot2/dsr_example2/dsr_realtime_control/: CMakeLists.txt  README.md  package.xml
src/doosan-robot2/dsr_example2/dsr_realtime_control/include/dsr_realtime_control/: realtime_control.hpp
src/doosan-robot2/dsr_gazebo2/: package.xml
src/doosan-robot2/dsr_hardware2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_msgs2/: CMakeLists.txt
src/doosan-robot2/dsr_mujoco/: CMakeLists.txt  README.md
src/doosan-robot2/dsr_mujoco/config/: 2f85_controller.yaml  dsr_mujoco_controller.yaml  dsr_mujoco_controller_with_2f85.yaml
src/doosan-robot2/dsr_mujoco/doc/: doc.md
src/doosan-robot2/dsr_mujoco/launch/: dsr_mujoco.launch.py  dsr_mujoco_default.launch.py
src/doosan-robot2/dsr_tests/: package.xml
src/doosan-robot2/install/: local_setup.sh  setup.sh
src/doosan-robot2/log/: latest_build
(+343 files in other folders)
